--- a/styles/form.css
+++ b/styles/form.css
@@ -63,9 +63,9 @@ main.form h1 {
     display: inline-block; /* Shrinks the width to fit the text */
     padding: 5px 10px; /* Adds spacing around the text */
     border-radius: 6px; /* Optional: Rounded corners */
-    text-align: left; /* Aligns text inside the block */
+    text-align: center; /* Aligns text inside the block */
     margin: 10px 0; /* Removes centering, but adds top/bottom spacing */
-    margin-left: 25px;
+    margin-left: 5px;
 }
 
 main.form form.wf1 {
@@ -74,7 +74,7 @@ main.form form.wf1 {
     align-items: flex-start; /* Align fields to the left */
     gap: 15px; 
     max-width: 400px; 
-    margin-left: 1.75rem;
+    margin-left: .75rem;
     padding: 15px;
     border: 3px solid var(--dark-border-color);
     border-radius: 8px;
@@ -255,7 +255,7 @@ header {
 header img {
     width: 225px; 
     height: auto;
-    margin-left: 2rem;
+    
     border: 3px solid var(--border-color); 
     box-shadow: 0 0 45px var(--shadow-color);
     margin-bottom: 1rem;
@@ -292,7 +292,7 @@ header img {
 #dMode img {
     width: 48px; 
     height: auto;
-    border: 2px solid var(--border-color); 
+    border: 2px solid var(--border-color);
     box-shadow: none;
 }
 
@@ -417,7 +417,6 @@ footer img {
         height: auto;
         border: 3px solid var(--border-color); 
         box-shadow: 0 0 45px var(--shadow-color);
-        margin-right: 2rem;
         transition: width 0.5s ease;
     }
 
